--- a/themes/hugo-theme-cactus-plus/layouts/partials/head.html
+++ b/themes/hugo-theme-cactus-plus/layouts/partials/head.html
@@ -28,4 +28,14 @@
 		{{ range .Site.Params.customCSS }}
 		<link rel="stylesheet" href="{{ $.Site.BaseURL }}{{ . }}">
 		{{ end }}
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135018596-1"></script>
+		<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+
+  		gtag('config', 'UA-135018596-1');
+		</script>
 	</head>
