--- a/themes/hugo-theme-cactus-plus/static/css/highlight.css
+++ b/themes/hugo-theme-cactus-plus/static/css/highlight.css
@@ -1,31 +1,31 @@
 /* http://jmblog.github.com/color-themes-for-google-code-highlightjs */
 
 code {
-    background: #fff;
-    font-size: 11px;
-    /*font-weight: 100;*/
-    padding: 4px;
-    border: none;
-    box-shadow: inset 0 0 0 1px #E4EBF2;
-    border-radius: 4px;
-    overflow: scroll;
-    font-family: 'Menlo', 'Monaco', Courier, monospace;
+  background: #fff;
+  font-size: 11px;
+  /*font-weight: 100;*/
+  padding: 4px;
+  border: none;
+  box-shadow: inset 0 0 0 1px #E4EBF2;
+  border-radius: 4px;
+  overflow: scroll;
+  font-family: 'Menlo', 'Monaco', Courier, monospace;
 }
 
 pre code {
-    font-size: 11px;
-    word-wrap: break-word;
-    -webkit-font-smoothing: subpixel-antialiased;
-    -moz-osx-font-smoothing: auto;
-    padding: 16px;
-    padding-bottom: 14px;
-    display: block;
-    color: #808080;
-    background: #fff;
-    border: none;
-    box-shadow: inset 0 0 0 1px #E4EBF2;
-    border-radius: 4px;
-    overflow: auto;
+  font-size: 13px;
+  word-wrap: break-word;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: auto;
+  padding: 16px;
+  padding-bottom: 14px;
+  display: block;
+  color: #808080;
+  background: rgb(47, 47, 47);
+  border: none;
+  box-shadow: inset 0 0 0 1px #E4EBF2;
+  border-radius: 4px;
+  overflow: auto;
 }
 
 /* Tomorrow Comment */
