--- a/themes/hugo-theme-cactus-plus/static/css/style.css
+++ b/themes/hugo-theme-cactus-plus/static/css/style.css
@@ -1,6 +1,85 @@
 /* Reset */
 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
     border: 0;
     font-size: 100%;
     font: inherit;
@@ -9,7 +88,17 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     padding: 0
 }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
     display: block
 }
 
@@ -17,11 +106,15 @@ body {
     line-height: 1
 }
 
-blockquote, q {
+blockquote,
+q {
     quotes: none
 }
 
-blockquote:before, blockquote:after, q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
     content: none
 }
 
@@ -30,7 +123,9 @@ table {
     border-spacing: 0
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -60,14 +155,15 @@ table {
     font-style: normal;
 }
 
-[class^="icon-"]:before, [class*=" icon-"]:before {
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
     font-family: "icons";
     font-style: normal;
     font-weight: normal;
     speak: none;
     display: inline-block;
     text-decoration: inherit;
-    text-align: left;
+    text-align: "justify";
     font-variant: normal;
     text-transform: none;
     line-height: 1em;
@@ -104,14 +200,23 @@ table {
 
 /* Spacing */
 
-.post h1, h3, h4, h5, p, #post-body ul, #post-list li, #post-body ol, pre {
+.post h1,
+h3,
+h4,
+h5,
+p,
+#post-body ul,
+#post-list li,
+#post-body ol,
+pre {
     margin-bottom: 20px;
 }
 
 
 /* Base */
 
-html, body {
+html,
+body {
     height: 100%;
 }
 
@@ -134,7 +239,7 @@ h2 {
     color: #bbb;
 }
 
-.profile  {
+.profile {
     padding: 60px 40px 0px;
     max-width: 600px;
     margin: 0 auto;
@@ -195,28 +300,31 @@ nav.main-nav a.cta {
     color: #fff;
     margin-left: 12px;
 }
+
 @media (max-width: 700px) {
-  nav.main-nav {
-      padding: 20px 10px 0 0;
-      background: #fff;
-      background: rgba(255, 255, 255, .90);
-      margin: 0 auto;
-      text-align: right;
-      z-index: 100;
-  }
-  nav.main-nav a {
-      top: 8px;
-      right: 6px;
-      padding: 8px 8px;
-      color: #5badf0;
-      font-size: 13px;
-      line-height: 1.35;
-      border-radius: 3px;
-  }
+    nav.main-nav {
+        padding: 20px 10px 0 0;
+        background: #fff;
+        background: rgba(255, 255, 255, .90);
+        margin: 0 auto;
+        text-align: right;
+        z-index: 100;
+    }
+
+    nav.main-nav a {
+        top: 8px;
+        right: 6px;
+        padding: 8px 8px;
+        color: #5badf0;
+        font-size: 13px;
+        line-height: 1.35;
+        border-radius: 3px;
+    }
 }
+
 @media (max-width: 324px) {
     nav.main-nav a.cta {
-      display: none;
+        display: none;
     }
 }
 
@@ -252,7 +360,10 @@ nav.main-nav a.cta {
 
 /*Accent color*/
 
-a, #title, #post-list a:hover, #title:hover {
+a,
+#title,
+#post-list a:hover,
+#title:hover {
     text-decoration: none;
     color: #5badf0;
     color: #5694f1;
@@ -265,7 +376,9 @@ p a {
 
 /*Transitions*/
 
-a, #post-nav a, #post-list a {
+a,
+#post-nav a,
+#post-list a {
     -webkit-transition: all 0.15s ease;
     -moz-transition: all 0.15s ease;
     -ms-transition: all 0.15s ease;
@@ -291,20 +404,25 @@ ul>li {
 
 /* Line Height */
 
-#post-body, p {
+#post-body,
+p {
     line-height: 1.7;
-}
-#post-body p > a {
-  word-break: break-word;
-  white-space: pre-wrap;
+    test-align: "justify";
 }
 
-b, strong {
+#post-body p>a {
+    word-break: break-word;
+    white-space: pre-wrap;
+}
+
+b,
+strong {
     font-weight: 500;
     color: #1E2025;
 }
 
-em, i {
+em,
+i {
     font-style: italic;
 }
 
@@ -379,7 +497,9 @@ em, i {
     margin-top: 2px;
 }
 
-h3, h4, h5 {
+h3,
+h4,
+h5 {
     color: #333;
 }
 
@@ -435,13 +555,15 @@ table {
     line-height: 1.5em;
 }
 
-th, td {
+th,
+td {
     text-align: left;
     padding-right: 20px;
     vertical-align: top;
 }
 
-table td, td {
+table td,
+td {
     border-spacing: none;
     border-style: solid;
     padding: 10px 15px;
@@ -456,7 +578,8 @@ tr:nth-child(odd)>td {
     background: #fcfcfc;
 }
 
-thead th, th {
+thead th,
+th {
     text-align: left;
     padding: 10px 15px;
     height: 20px;
@@ -490,10 +613,11 @@ img {
 Post List
 =========================================== */
 
-#post-list, #archive-list {
-}
+#post-list,
+#archive-list {}
 
-#post-list li, #archive-list li {
+#post-list li,
+#archive-list li {
     list-style-type: none;
 }
 
@@ -553,11 +677,12 @@ Post List
 
 /* Post Page */
 
-#header {
-}
+#header {}
+
 #wrapper.post {
-    max-width: 670px;
+    max-width: 700px;
 }
+
 .post {
     margin: auto;
 }
@@ -693,7 +818,8 @@ h2.month {
     color: #bbb;
 }
 
-#archive-list li a:hover, #archive-list li:hover .dates {
+#archive-list li a:hover,
+#archive-list li:hover .dates {
     color: #5694f1;
 }
 
@@ -710,9 +836,11 @@ h2.month {
 #post-list.archive.readmore {
     margin-top: 70px;
 }
+
 #post-list.archive.readmore li {
     margin-bottom: 0px;
 }
+
 #post-list.archive.readmore h3 {
     font: 400 20px "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin-bottom: 30px;
@@ -731,7 +859,8 @@ h2.month {
     font: 300 16px/1.6 "Helvetica Neue", helvetica, Arial, sans-serif;
 }
 
-#disqus_thread, #ds-thread {
+#disqus_thread,
+#ds-thread {
     margin-top: 100px;
 }
 
@@ -760,40 +889,53 @@ h2.month {
     #wrapper {
         padding: 20px 20px 20px 20px;
     }
+
     #header {
         margin-bottom: 60px;
     }
+
     .post {
         margin: 40px 0;
     }
+
     #footer {
         margin-top: 60px;
     }
-    #post-list, #archive-list {
+
+    #post-list,
+    #archive-list {
         margin-top: 0;
     }
+
     #post-meta {
         margin-top: 60px;
     }
+
     #title {
         font-size: 17px;
     }
+
     #post-list .dates {
         display: none;
     }
+
     #post-list-footer {
         margin-top: 20px;
         padding-top: 40px;
     }
+
     h1 {
         font-size: 26px;
     }
+
     .post h2.headline {
         font-size: 13px;
     }
+
     .post h1 {
         font-size: 24px;
     }
+
     .post h2 {
         font-size: 20px;
     }
@@ -807,7 +949,7 @@ h2.month {
 .archive .post-item {
     padding: 10px 0px;
     overflow-x: hidden;
-    white-space:nowrap;
+    white-space: nowrap;
 }
 
 .archive .post-time {
@@ -834,6 +976,7 @@ h2.month {
     color: #5694f1;
     transition: 0.3s ease-out;
 }
+
 .archive .post-item:hover .post-link {
     color: #5694f1;
 }
@@ -867,50 +1010,56 @@ a.symbol:hover {
  * Table of content
  */
 #toc {
-  line-height: 1em;
-  font-size: .7em;
-  word-wrap: break-word;
-  padding: 8px;
-  padding-left: 16px;
-  padding-bottom: 14px;
-  margin: 0 0 25px 0;
-  display: block;
-  color: #808080;
-  background: #fff;
-  border: none;
-  box-shadow: inset 0 0 0 1px #E4EBF2;
-  border-radius: 4px;
-  overflow: hidden;
-  font-family: 'Menlo', 'Monaco', Courier, monospace;
+    line-height: 1em;
+    font-size: .7em;
+    word-wrap: break-word;
+    padding: 8px;
+    padding-left: 16px;
+    padding-bottom: 14px;
+    margin: 0 0 25px 0;
+    display: block;
+    color: #808080;
+    background: #fff;
+    border: none;
+    box-shadow: inset 0 0 0 1px #E4EBF2;
+    border-radius: 4px;
+    overflow: hidden;
+    font-family: 'Menlo', 'Monaco', Courier, monospace;
 }
+
 #TableOfContents {
-  margin: 1em 0 0 0;
-  overflow-x: auto;
-  word-wrap: normal;
-  word-break: break-all;
-  white-space: nowrap;
+    margin: 1em 0 0 0;
+    overflow-x: auto;
+    word-wrap: normal;
+    word-break: break-all;
+    white-space: nowrap;
 }
+
 #TableOfContents ul {
-  list-style-type:none;
-  margin: 0;
-  padding: 0 .5em;
+    list-style-type: none;
+    margin: 0;
+    padding: 0 .5em;
 }
+
 #TableOfContents ul li {
-  list-style-type: none;
-  line-height: 1.7em;
+    list-style-type: none;
+    line-height: 1.7em;
 }
-#TableOfContents > ul {
-  padding: 0;
+
+#TableOfContents>ul {
+    padding: 0;
 }
-#TableOfContents > ul > li > ul {
-  padding: 0;
+
+#TableOfContents>ul>li>ul {
+    padding: 0;
 }
-#TableOfContents a code{
-  font-family: Menlo, Monaco, Courier;
-  background-color: #fff;
-  font-size: 11px;
-  padding: 2px 3px;
-  font-weight: 100;
+
+#TableOfContents a code {
+    font-family: Menlo, Monaco, Courier;
+    background-color: #fff;
+    font-size: 11px;
+    padding: 2px 3px;
+    font-weight: 100;
 }
 
 
@@ -922,30 +1071,38 @@ a.symbol:hover {
     max-width: 768px;
     padding-top: 0;
 }
+
 .page-tags {
     text-align: center;
 }
+
 .page-tags ul li {
     margin: 10px 15px;
     display: inline-block;
     font-size: 1.2em;
 }
+
 .page-tags ul li a {
     color: #8a8a8a;
 
 }
+
 .page-tags ul li a span {
     font-size: .9em;
 }
+
 .page-tags ul li a:hover {
     color: #5694f1;
 }
 
 #my-text-box {
     font-weight: bold;
-    font-size: 18px; /* or larger */
-    height: 2em; /* or larger */
-    width: 400px; /* or larger */
+    font-size: 18px;
+    /* or larger */
+    height: 2em;
+    /* or larger */
+    width: 400px;
+    /* or larger */
 }
 
 #wrapper {
@@ -954,8 +1111,10 @@ a.symbol:hover {
 
 #contact_image {
 
-    height: 200px; /* or larger */
-    width: 200px; /* or larger */
+    height: 200px;
+    /* or larger */
+    width: 200px;
+    /* or larger */
 }
 
 #send_button {
