--- a/themes/hugo-theme-cactus-plus/static/css/style.css
+++ b/themes/hugo-theme-cactus-plus/static/css/style.css
@@ -1022,9 +1022,11 @@ a.symbol:hover {
     background: #fff;
     border: none;
     box-shadow: inset 0 0 0 1px #E4EBF2;
-    border-radius: 4px;
     overflow: hidden;
     font-family: 'Menlo', 'Monaco', Courier, monospace;
+    background-color: #333;
+    border-radius: 30px;
+    font-size: 12px;
 }
 
 #TableOfContents {
