--- a/themes/hugo-theme-cactus-plus/layouts/index.html
+++ b/themes/hugo-theme-cactus-plus/layouts/index.html
@@ -1,15 +1,26 @@
 	{{ partial "head.html" . }}
-	<body>
-    {{ partial "nav.html" . }}
 
-    {{ partial "profile.html" . }}
+        <div class="row"; style="background-image: url('css/wallpaper3.jpg'); background-position:center;">
+        <div class="col-md-3"></div>
+        <div class="col-md-6"; style="background-color: white ">
+            <body>
+            {{ partial "nav.html" . }}
 
-    <section id="wrapper" class="home">
-        {{ partial "post-list.html"  . }}
-        {{ partial "pagination.html" . }}
-        {{ partial "footer.html"     . }}
-    </section>
+            {{ partial "profile.html" . }}
 
-    {{ partial "js.html" . }}
-    </body>
+            <section id="wrapper" class="home">
+                {{ partial "post-list.html"  . }}
+                {{ partial "pagination.html" . }}
+                {{ partial "footer.html"     . }}
+            </section>
+
+            {{ partial "js.html" . }}
+            </body></div>
+
+
+
+        <div class="col-md-3"></div>
+        </div> 
+
 </html>
+
