--- a/themes/hugo-theme-cactus-plus/layouts/partials/head.html
+++ b/themes/hugo-theme-cactus-plus/layouts/partials/head.html
@@ -15,6 +15,8 @@
 		<link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
 		<link rel="stylesheet" href="{{ .Site.BaseURL }}css/highlight.css">
 
+		<link rel="stylesheet" href="{{ .Site.BaseURL }}css/bootstrap.css">
+
 		{{ if eq .Site.Params.iconFont "font-awesome" }}
 		<link rel="stylesheet" href="{{ .Site.BaseURL }}css/font-awesome.min.css">
 		{{ else }}
