--- a/themes/hugo-theme-cactus-plus/static/css/style.css
+++ b/themes/hugo-theme-cactus-plus/static/css/style.css
@@ -239,11 +239,15 @@ h2 {
     color: #bbb;
 }
 
+
+
+
+
 .profile {
     padding: 60px 40px 0px;
     max-width: 600px;
     margin: 0 auto;
-    text-align: center
+    text-align: center;
 }
 
 .profile #header {
