--- a/themes/hugo-theme-cactus-plus/static/css/highlight.css
+++ b/themes/hugo-theme-cactus-plus/static/css/highlight.css
@@ -21,7 +21,7 @@ pre code {
   padding-bottom: 14px;
   display: block;
   color: #808080;
-  background: rgb(47, 47, 47);
+  background: rgba(224, 224, 224, 0.808);
   border: none;
   box-shadow: inset 0 0 0 1px #E4EBF2;
   border-radius: 4px;
