--- a/themes/hugo-theme-cactus-plus/layouts/_default/single.html
+++ b/themes/hugo-theme-cactus-plus/layouts/_default/single.html
@@ -1,4 +1,8 @@
 {{ partial "head.html" . }}
+    <div class="row"; style="background-image: url('../img/wallpaper.jpg'); background-position:center;">
+        <div class="col-md-3"></div>
+        <div class="col-md-6"; style="background-color: white ">
+
     <body>
        {{ partial "nav.html" . }}
 
@@ -52,4 +56,9 @@
 
         {{ partial "js.html" . }}
     </body>
+
+
+        <div class="col-md-3"></div>
+        </div> 
+
 </html>
