--- a/themes/hugo-theme-cactus-plus/layouts/section/about.html
+++ b/themes/hugo-theme-cactus-plus/layouts/section/about.html
@@ -1,5 +1,9 @@
 {{ partial "head.html" . }}
-<body>
+
+     <div class="row"; style="background-image: url('../img/wallpaper.jpg'); background-position:center;">
+        <div class="col-md-3"></div>
+        <div class="col-md-6"; style="background-color: white ">
+            <body>
 {{ partial "nav.html" . }}
 {{ partial "profile-about.html" . }}
 
@@ -17,3 +21,7 @@
 
 {{ partial "js.html" . }}
 </body>
+</div>
+        <div class="col-md-3"></div>
+     </div> 
+
