--- a/themes/hugo-theme-cactus-plus/static/css/style.css
+++ b/themes/hugo-theme-cactus-plus/static/css/style.css
@@ -1025,8 +1025,7 @@ a.symbol:hover {
     box-shadow: inset 0 0 0 1px #E4EBF2;
     overflow: hidden;
     font-family: 'Menlo', 'Monaco', Courier, monospace;
-    background-color: #333;
-    border-radius: 30px;
+    background-color: rgb(216, 216, 216);
     font-size: 14px;
 }
 
