--- a/themes/hugo-theme-cactus-plus/layouts/index.html
+++ b/themes/hugo-theme-cactus-plus/layouts/index.html
@@ -1,6 +1,6 @@
 	{{ partial "head.html" . }}
 
-     <div class="row"; style="background-image: url('css/wallpaper3.jpg'); background-position:center;">
+     <div class="row"; style="background-image: url('img/wallpaper.jpg'); background-position:center;">
         <div class="col-md-3"></div>
         <div class="col-md-6"; style="background-color: white ">
             <body>
