--- a/themes/hugo-theme-cactus-plus/layouts/_default/single.html
+++ b/themes/hugo-theme-cactus-plus/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ partial "head.html" . }}
-    <div class="row"; style="background-image: url('../img/wallpaper.jpg'); background-position:center;">
+    <div class="row"; style="background-image: url('../../img/wallpaper.jpg'); background-position:center;">
         <div class="col-md-3"></div>
         <div class="col-md-6"; style="background-color: white ">
 
