enhanced contact page

--- a/themes/hugo-theme-cactus-plus/layouts/section/contact.html
+++ b/themes/hugo-theme-cactus-plus/layouts/section/contact.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+{{ partial "head.html" . }}
+
 <head>
 	<title>Contact V1</title>
 	<meta charset="UTF-8">
@@ -21,6 +21,16 @@
 	<link rel="stylesheet" type="text/css" href="../css/contact_main.css">
 <!--===============================================================================================-->
 </head>
+
+
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6" ; style="background-color: white ">
+		{{ partial "nav.html" . }}
+    </div>
+    <div class="col-md-3"></div>
+</div>
+
 <body>
 
 	<div class="contact1">
