--- a/themes/hugo-theme-cactus-plus/layouts/section/about.html
+++ b/themes/hugo-theme-cactus-plus/layouts/section/about.html
@@ -5,7 +5,9 @@
     <div class="col-md-6" ; style="background-color: white ">
 
         <body>
-            {{ partial "nav.html" . }} {{ partial "profile-about.html" . }}
+            {{ partial "nav.html" . }} 
+            
+            {{ partial "profile-about.html" . }}
 
             <section id="wrapper" class="home">
                 {{ .Content }} {{ if .Site.Params.enableDisqus }} {{ if ne .Params.disabledisqus "true" }} {{ partial "disqus.html" . }} {{ end }} {{ end }} {{ partial "footer.html" . }}
